--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "世界大同",
-    "version": "1.0",
+    "name": "世界大同2.0",
+    "version": "2.0",
     "description": "同文同世界",
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'" ,
     "icons": {
@@ -12,7 +12,7 @@
             "19": "images/icon19.png",
             "38": "images/icon38.png"
         },
-        "default_title": "世界大同",
+        "default_title": "世界大同2.0",
         "default_popup": "popup.html"
     },
     "content_scripts": [
